News UAT/force-app/main/default/objects/Requirement__c/fields/Actual_Effort_Days__c.field-meta.xml
<CustomField>
    <fullName>Actual_Effort_Days__c</fullName>
    <label>Actual Effort (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>