News UAT/force-app/main/default/objects/Requirement__c/fields/Assigned_To_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Current_User__c</fullName>
    <formula>IF(Assigned_To__c = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>