News UAT/force-app/main/default/objects/Requirement__c/fields/BA_Test_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>BA_Test_Complete_Date__c</fullName>
    <label>BA Test Complete Date</label>
    <type>Date</type>
</CustomField>