News UAT/force-app/main/default/objects/Requirement__c/fields/Design_Answers__c.field-meta.xml
<CustomField>
    <fullName>Design_Answers__c</fullName>
    <label>Design Answers</label>
    <type>TextArea</type>
</CustomField>