News UAT/force-app/main/default/objects/Requirement__c/fields/Design_Questions__c.field-meta.xml
<CustomField>
    <fullName>Design_Questions__c</fullName>
    <label>Design Questions</label>
    <type>TextArea</type>
</CustomField>