News UAT/force-app/main/default/objects/Requirement__c/fields/Developer_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Developer_Complete_Date__c</fullName>
    <label>Developer Complete Date</label>
    <type>Date</type>
</CustomField>