News UAT/force-app/main/default/objects/Requirement__c/fields/Developer_Effort__c.field-meta.xml
<CustomField>
    <fullName>Developer_Effort__c</fullName>
    <label>Developer Effort</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>