News UAT/force-app/main/default/objects/Requirement__c/fields/Enabling_Technology__c.field-meta.xml
<CustomField>
    <fullName>Enabling_Technology__c</fullName>
    <label>Enabling Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC Configuration</fullName>
            </value>
            <value>
                <fullName>SFDC Apex</fullName>
            </value>
            <value>
                <fullName>Batch Process/ETL</fullName>
            </value>
            <value>
                <fullName>Web Services</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Customer Data Integration</fullName>
            </value>
            <value>
                <fullName>Scontrol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>