News UAT/force-app/main/default/objects/Requirement__c/fields/Estimated_Effort_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_Days__c</fullName>
    <formula>CASE( Solution_Complexity__c , &quot;High&quot;, 4, &quot;Medium&quot;, 2, &quot;Low&quot;, 1,&quot;Very Low&quot;, 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Effort (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>