News UAT/force-app/main/default/objects/Requirement__c/fields/Fit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fit_Percentage__c</fullName>
    <label>Fit Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>