News UAT/force-app/main/default/objects/Requirement__c/fields/Functional_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Functional_Requirement__c</fullName>
    <description>Description of business requirement</description>
    <inlineHelpText>Description of business requirement</inlineHelpText>
    <label>Functional Requirement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>