News UAT/force-app/main/default/objects/Requirement__c/fields/High_Level_Requirement__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Requirement__c</fullName>
    <label>High Level Requirement</label>
    <referenceTo>High_Level_Requirement__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>R00N80000002bEVbEAM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>