News UAT/force-app/main/default/objects/Requirement__c/fields/Implemented_by_Other_Team__c.field-meta.xml
<CustomField>
    <fullName>Implemented_by_Other_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implemented by Other Team</label>
    <type>Checkbox</type>
</CustomField>