News UAT/force-app/main/default/objects/Requirement__c/fields/Is_a_Duplicate_Of__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Duplicate_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ensure Scope is set to &#39;Deleted&#39;</inlineHelpText>
    <label>Is a Duplicate Of</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>