News UAT/force-app/main/default/objects/Requirement__c/fields/Is_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to another Requirement that is related to this Requirement - to track links between Requirements

Such as similarity in functionality, dependency, different object/same functionality, and more</inlineHelpText>
    <label>Is Related To</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Requirements (Is Related To)</relationshipLabel>
    <relationshipName>Related_To</relationshipName>
    <type>Lookup</type>
</CustomField>