News UAT/force-app/main/default/objects/Requirement__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>VALUE( CASE( Story_Points__c , &quot;0.5&quot;, &quot;0.5&quot;, &quot;1&quot;, &quot;1&quot;,&quot;2&quot;,&quot;2&quot;,&quot;3&quot;,&quot;3&quot;,&quot;5&quot;,&quot;5&quot;,&quot;8&quot;,&quot;8&quot;,&quot;13&quot;,&quot;13&quot;,&quot;21&quot;,&quot;21&quot;,&quot;34&quot;,&quot;34&quot;,&quot;0&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>