News UAT/force-app/main/default/objects/Requirement__c/fields/Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Id__c</fullName>
    <label>Process L1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>