News UAT/force-app/main/default/objects/Requirement__c/fields/Process_L2__c.field-meta.xml
<CustomField>
    <fullName>Process_L2__c</fullName>
    <label>Process L2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>