News UAT/force-app/main/default/objects/Requirement__c/fields/Process_L3__c.field-meta.xml
<CustomField>
    <fullName>Process_L3__c</fullName>
    <label>Process L3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>