News UAT/force-app/main/default/objects/Requirement__c/fields/Proposed_Approach__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Approach__c</fullName>
    <label>Proposed Approach</label>
    <type>TextArea</type>
</CustomField>