News UAT/force-app/main/default/objects/Requirement__c/fields/Release_BLD1_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_BLD1_Date__c</fullName>
    <label>Release BLD1 Date</label>
    <type>Date</type>
</CustomField>