News UAT/force-app/main/default/objects/Requirement__c/fields/Release_PROD__c.field-meta.xml
<CustomField>
    <fullName>Release_PROD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release PROD</label>
    <type>Checkbox</type>
</CustomField>