News UAT/force-app/main/default/objects/Requirement__c/fields/Release_PROD_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_PROD_Date__c</fullName>
    <label>Release PROD Date</label>
    <type>Date</type>
</CustomField>