News UAT/force-app/main/default/objects/Requirement__c/fields/Release_SIT1_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_SIT1_Date__c</fullName>
    <label>Release SIT1 Date</label>
    <type>Date</type>
</CustomField>