News UAT/force-app/main/default/objects/Requirement__c/fields/Release_UAT1__c.field-meta.xml
<CustomField>
    <fullName>Release_UAT1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release UAT1</label>
    <type>Checkbox</type>
</CustomField>