News UAT/force-app/main/default/objects/Requirement__c/fields/Release_UAT1_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_UAT1_Date__c</fullName>
    <label>Release UAT1 Date</label>
    <type>Date</type>
</CustomField>