News UAT/force-app/main/default/objects/Requirement__c/fields/Req_Workshop_Questions__c.field-meta.xml
<CustomField>
    <fullName>Req_Workshop_Questions__c</fullName>
    <label>Req. Workshop Questions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>