News UAT/force-app/main/default/objects/Requirement__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>