News UAT/force-app/main/default/objects/Requirement__c/fields/Requirement_Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Planned_Value__c</fullName>
    <formula>Total_Effort_Days__c * 8 * 250</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Planned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>