News UAT/force-app/main/default/objects/Requirement__c/fields/Requirements_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Tracking__c</fullName>
    <label>Requirements Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baseline Requirement</fullName>
            </value>
            <value>
                <fullName>New Requirement</fullName>
                <default>true</default>
                <label>New Requirement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>