News UAT/force-app/main/default/objects/Requirement__c/fields/Reviewed_with_Business__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_with_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signed off by business.</description>
    <label>Reviewed with Business</label>
    <type>Checkbox</type>
</CustomField>