News UAT/force-app/main/default/objects/Requirement__c/fields/Reviewed_with_Tech_Team__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_with_Tech_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requirement has been signed off by the technical team.</description>
    <label>Reviewed with Tech Team</label>
    <type>Checkbox</type>
</CustomField>