News UAT/force-app/main/default/objects/Requirement__c/fields/Salesforce_Effort_Required__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Effort_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Salesforce Effort Required</label>
    <type>Checkbox</type>
</CustomField>