News UAT/force-app/main/default/objects/Requirement__c/fields/Schedule_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sprint__c</fullName>
    <inlineHelpText>Sprint 1: Baseline Accounts, Contacts, Opportunity
Sprint 2: Accounts, Contacts, Console
Sprint 3: Bookings
Sprint 4: Campaigns
Sprint 5:</inlineHelpText>
    <label>Schedule Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unscheduled</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Unscheduled</label>
            </value>
            <value>
                <fullName>Sprint 1</fullName>
                <color>#78C953</color>
                <label>Sprint 1</label>
            </value>
            <value>
                <fullName>Sprint 2</fullName>
                <color>#E27001</color>
                <label>Sprint 2</label>
            </value>
            <value>
                <fullName>Sprint 3</fullName>
                <color>#A845DC</color>
                <label>Sprint 3</label>
            </value>
            <value>
                <fullName>Sprint 4</fullName>
                <color>#F3D904</color>
                <label>Sprint 4</label>
            </value>
            <value>
                <fullName>Sprint 5</fullName>
                <color>#A53711</color>
                <label>Sprint 5</label>
            </value>
            <value>
                <fullName>Sprint 6</fullName>
                <color>#66E9BD</color>
                <label>Sprint 6</label>
            </value>
            <value>
                <fullName>Sprint 7</fullName>
                <color>#0B24BE</color>
                <label>Sprint 7</label>
            </value>
            <value>
                <fullName>Sprint 8</fullName>
                <color>#419249</color>
                <label>Sprint 8</label>
            </value>
            <value>
                <fullName>Sprint 9</fullName>
                <color>#B6E32E</color>
                <label>Sprint 9</label>
            </value>
            <value>
                <fullName>Sprint 10</fullName>
                <color>#641CCF</color>
                <label>Sprint 10</label>
            </value>
            <value>
                <fullName>Sprint 11</fullName>
                <color>#F96FB7</color>
                <label>Sprint 11</label>
            </value>
            <value>
                <fullName>Sprint 12</fullName>
                <color>#2F5D85</color>
                <label>Sprint 12</label>
            </value>
            <value>
                <fullName>Sprint 13</fullName>
            </value>
            <value>
                <fullName>Sprint 14</fullName>
            </value>
            <value>
                <fullName>Sprint 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>