News UAT/force-app/main/default/objects/Requirement__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Out-of-Scope (deferred)</fullName>
            </value>
            <value>
                <fullName>In-Scope (As-Is)</fullName>
            </value>
            <value>
                <fullName>In-Scope (Manual)</fullName>
            </value>
            <value>
                <fullName>In-Scope (Automated)</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>