News UAT/force-app/main/default/objects/Requirement__c/fields/Solution_Risks_Issues__c.field-meta.xml
<CustomField>
    <fullName>Solution_Risks_Issues__c</fullName>
    <label>Solution Risks/Issues</label>
    <type>TextArea</type>
</CustomField>