News UAT/force-app/main/default/objects/Requirement__c/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Workflow Rules</fullName>
            </value>
            <value>
                <fullName>Lead Assignement Rules</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Security Model</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Data Validation</fullName>
            </value>
            <value>
                <fullName>API Development</fullName>
            </value>
            <value>
                <fullName>VisualForce Development</fullName>
            </value>
            <value>
                <fullName>Apex Code Development</fullName>
            </value>
            <value>
                <fullName>Outbound Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>