News UAT/force-app/main/default/objects/Requirement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Cannot Be Met</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Information Only</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Lockdown</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Not A Requirement</fullName>
            </value>
            <value>
                <fullName>Open Issue Remains</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Ready For Build</fullName>
            </value>
            <value>
                <fullName>Ready for Deploy</fullName>
            </value>
            <value>
                <fullName>Ready For Test</fullName>
            </value>
            <value>
                <fullName>Re-work Requireed</fullName>
            </value>
            <value>
                <fullName>Waiting on Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>