News UAT/force-app/main/default/objects/Requirement__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <label>Story Points</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>