News UAT/force-app/main/default/objects/Requirement__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>News Internal</fullName>
            </value>
            <value>
                <fullName>Active Directory Security</fullName>
            </value>
            <value>
                <fullName>CyberAd Desktop Dev</fullName>
            </value>
            <value>
                <fullName>Genesys</fullName>
            </value>
            <value>
                <fullName>QAS</fullName>
            </value>
            <value>
                <fullName>WDCi</fullName>
            </value>
            <value>
                <fullName>webMethods</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>