News UAT/force-app/main/default/objects/Requirement__c/fields/Total_Effort_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort_Days__c</fullName>
    <formula>IF(
 OR(
   NOT(ISBLANK(Developer_Effort__c)), 
   NOT(ISBLANK(Functional_Effort__c))
 ) , 
  BLANKVALUE(Developer_Effort__c, 0) + BLANKVALUE(Functional_Effort__c, 0), 
 Estimated_Effort_Days__c 
)</formula>
    <label>Total Effort (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>