News UAT/force-app/main/default/objects/Requirement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Business Entity Relationship</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Workflow / Business Process Flow</fullName>
            </value>
            <value>
                <fullName>Reporting / Documentation</fullName>
            </value>
            <value>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </value>
            <value>
                <fullName>Regulatory/Legal/Regional/ Globalization</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Custom Code</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Territory Management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>