News UAT/force-app/main/default/objects/Requirement__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>Narrative in business terms of how the requirement may be applied.  This information could be later used for test scripts and training materials.</description>
    <inlineHelpText>Narrative in business terms of how the requirement may be applied.  This information could be later used for test scripts and training materials.</inlineHelpText>
    <label>Use Case</label>
    <type>TextArea</type>
</CustomField>