News UAT/force-app/main/default/objects/Requirement__c/validationRules/Populate_Actual_Effort.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Actual_Effort</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c, &quot;Ready For Test&quot; ) &amp;&amp;  ISNULL( Actual_Effort_Days__c  )</errorConditionFormula>
    <errorDisplayField>Actual_Effort_Days__c</errorDisplayField>
    <errorMessage>Please enter Actual Effort</errorMessage>
</ValidationRule>