News UAT/force-app/main/default/objects/Requirement__c/listViews/Accounts_Contacts.listView-meta.xml
<ListView>
    <fullName>Accounts_Contacts</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>Functional_Requirement__c</columns>
    <columns>Comments__c</columns>
    <columns>Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Scope__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>High_Level_Requirement__c</field>
        <operation>equals</operation>
        <value>Accounts &amp; Contacts</value>
    </filters>
    <label>Accounts &amp; Contacts</label>
</ListView>