News UAT/force-app/main/default/objects/Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>Functional_Requirement__c</columns>
    <columns>Scope__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>