News UAT/force-app/main/default/objects/Requirement__c/listViews/All_Non_SFDC_Requirements.listView-meta.xml
<ListView>
    <fullName>All_Non_SFDC_Requirements</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <columns>Functional_Effort__c</columns>
    <columns>Functional_Requirement__c</columns>
    <columns>Technical_Considerations__c</columns>
    <columns>Status__c</columns>
    <columns>Schedule_Sprint__c</columns>
    <columns>Developer_Effort__c</columns>
    <columns>Estimated_Effort_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Implemented_by_Other_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Non SFDC Requirements</label>
</ListView>